--- a/haml/index.haml
+++ b/haml/index.haml
@@ -12,3 +12,4 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
   %body
     #container
+      %p hello
