--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,47 @@
-body {
-  background-color: red; }
+@charset "UTF-8";
+body, html {
+  margin: 0;
+  font-family: "Hiragino Kaku Gothic ProN", "メイリオ", sans-serif; }
+
+#base {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  z-index: -1; }
+  #base img.rolling {
+    position: absolute;
+    z-index: 0;
+    width: 250%;
+    left: -75%;
+    top: -15%; }
+  #base img.miyachi_san {
+    position: relative;
+    top: 5%;
+    width: 70%;
+    left: 15%; }
+  #base img.happy {
+    position: absolute;
+    width: 100%;
+    left: 0px;
+    bottom: 0px; }
+
+#top {
+  background-image: url("../images/star.jpg");
+  padding: 100px 0 1600px; }
+  #top img.scroll_down {
+    position: relative;
+    width: 80%;
+    left: 10%; }
+
+#middle {
+  height: 1000px; }
+
+#message {
+  background: linear-gradient(to bottom, rgba(137, 255, 241, 0) 0%, rgba(0, 0, 0, 0.75) 80%);
+  color: white;
+  padding: 8px;
+  padding-top: 300px; }
+  #message p {
+    margin: 8px; }
 
 /*# sourceMappingURL=style.css.map */
