--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,2 +1,44 @@
-body
-  background-color: red
+body, html
+  margin: 0
+  font-family: "Hiragino Kaku Gothic ProN","メイリオ", sans-serif
+
+#base
+  position: fixed
+  height: 100%
+  width: 100%
+  z-index: -1
+  img.rolling
+    position: absolute
+    z-index: 0
+    width: 250%
+    left: -75%
+    top: -15%
+  img.miyachi_san 
+    position: relative
+    top: 5%
+    width: 70%
+    left: 15%
+  img.happy
+    position: absolute
+    width: 100%
+    left: 0px
+    bottom: 0px
+
+#top
+  background-image: url('../images/star.jpg')
+  padding: 100px 0 1600px
+  img.scroll_down
+    position: relative
+    width: 80%
+    left: 10%
+
+#middle
+  height: 1000px
+
+#message
+  background: linear-gradient(to bottom,  rgba(137,255,241,0) 0%,rgba(0,0,0,0.75) 80%)
+  color: white
+  padding: 8px
+  padding-top: 300px
+  p 
+    margin: 8px
