--- a/haml/index.haml
+++ b/haml/index.haml
@@ -24,8 +24,7 @@
         %p.vspace
         %p お誕生日おめでとうございます！
         %p 時が経つのは早いもので、あのインターンから、2年近くの歳月が経ちましたね。
-        %p ようやく、近くでお仕事をできるようになり、ワクワクとドキドキに溢れています。
-        %p ワクワク1割、ドキドキ9割ではありますが...笑
+        %p ようやく、近くでお仕事をできるようになり、ワクワクとドキドキに溢れています。(ワクワク1割、ドキドキ9割ではありますが...笑)
         %p.vspace
         %p 2年前のインターンの間は常に苦労し、思い悩んでおりましたが、あの「ラジオ体操」の課題を宮地さんにとても褒めて頂けたおかげで、ほんの少しだけ自信を持てたことを覚えております。
         %p 今ここにいるのは、宮地さんのおかげと言っても過言ではないと思うのです。（もちろん仁藤さんをはじめ、色々な方とのご縁もありましたが。）
