--- a/sass/style.sass
+++ b/sass/style.sass
@@ -26,7 +26,7 @@ body, html
 
 #top
   background-image: url('../images/star.jpg')
-  padding: 100px 0 1600px
+  padding: 100px 0 5600px
   img.scroll_down
     position: relative
     width: 80%
@@ -42,3 +42,6 @@ body, html
   padding-top: 300px
   p 
     margin: 8px
+  p.vspace
+    width: 100%
+    height: 16px
