--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body, html {
 
 #top {
   background-image: url("../images/star.jpg");
-  padding: 100px 0 1600px; }
+  padding: 100px 0 5600px; }
   #top img.scroll_down {
     position: relative;
     width: 80%;
@@ -43,5 +43,8 @@ body, html {
   padding-top: 300px; }
   #message p {
     margin: 8px; }
+  #message p.vspace {
+    width: 100%;
+    height: 16px; }
 
 /*# sourceMappingURL=style.css.map */
